<resources>

  <!-- Customer -->
  <string name="customer_name">Customer Name</string>
  <string name="customer_name_hint">Name</string>
  <string name="customer_address_one_hint">Address1</string>
  <string name="customer_address_two_hint">Address2</string>
  <string name="customer_city_hint">City</string>
  <string name="customer_state_hint">St </string>
  <string name="customer_zip_hint">Zip</string>
  <string name="customer_phone_hint">Phone</string>
  <string name="customer_email_hint">Email</string>
	<string name="customer_add_bttn_text">Save</string>
	<string name="customer_add_bttn_toast">Changes Saved</string>
	<string name="customer_del_bttn_text">Delete</string>
	<string name="customer_del_bttn_toast">Customer Deleted</string>
	<string name="customer_image_content_desc">Customer Image</string>
  <string name="customer_image_bttn_label">Take Picture</string>


  <!-- Session -->
  <string name="session_cust_name">Session Customer Name</string>
  <string name="session_plan">Workout until customer hurls. Party on!</string>
  <string name="session_plan_hint">Enter session plan</string>
  <string name="session_cost">19.99</string>
  <string name="session_date_picker_title">Session Date</string>


  <!-- Login -->
  <string name="login_title">Login</string>
  <string name="login_login_field_hint">Enter Login</string>
  <string name="login_password_field_hint">Enter Password</string>
  <string name="login_login_button_text">Sign In</string>

  <!-- App -->
  <string name="app_name">HomeFit</string>
  <string name="menu_item_add_customer">Add Customer</string>
  <string name="menu_item_add_session">Add Session</string>
  <string name="logoff">LogOff</string>

  <!-- Users -->
  <string name="user_str_user_name">jdoe</string>
  <string name="user_str_password">welcome1</string>

  <!-- Titles -->
  <string name="tab_title_customer">Customers</string>
  <string name="tab_title_sessions">Sessions</string>
  <string name="tab_title_billing">Billing</string>
	<string name="act_title_customer">Add/Edit Customer</string>
	<string name="act_title_sessions">Add/Edit Sessions</string>
	<string name="act_title_billing">Add/Edit Billing</string>

  <!-- Prompts -->
  <string name="prom_hint_login">Enter Login</string>
  <string name="prom_hint_password">Enter Password</string>

  <!-- Messages -->
  <string name="msg_login_successful">Access granted</string>
  <string name="msg_login_unsuccessful">Sign in failed</string>
  <string name="msg_logging_off">Logging off</string>

  <!-- Labels -->
  <string name="lbl_btn_sign_in">Sign in</string>
  <string name="lbl_screen_bill">Bill</string>
  <string name="lbl_screen_billing">Billing</string>
  <string name="lbl_screen_customer">Customer</string>
  <string name="lbl_screen_customers">Customers</string>
  <string name="lbl_screen_session">Session</string>
  <string name="lbl_screen_sessions">Sessions</string>

  <!-- Descriptions -->
  <string name="desc_logo">HomeFit Logo</string>
  <string name="desc_login_activity">Login Screen</string>


  <string name="temp_session_list_item_text">Session list item text</string>
  <string name="temp_session_title">Session</string>
  <string name="temp_bill_list_item_text">Bill list item text</string>
  <string name="temp_bill_title">Billing</string>
  <string name="temp_menu_item_billing">TEMP BILL MENU ITEM</string>

  <string-array name="temp_bill_list">
    <item name="temp_bill_item_one">I am temp bill item one</item>
    <item name="temp_bill_item_two">I am temp bill item two</item>
    <item name="temp_bill_item_three">I am temp bill item three</item>
  </string-array>


  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="title_activity_main">MainActivity</string>
  <string name="action_settings">Settings</string>
  <string name="section_format">Hello World from section: %1$d</string>

</resources>
