<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:background="@android:color/background_dark"
                android:contentDescription="@string/desc_login_activity"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_HomeFit_padding_med_gen">

  <ImageView
    android:id="@+id/login_image_view"
    style="@style/_Align_Mid_Child_vert"
    android:background="@android:color/background_light"
    android:contentDescription="@string/desc_logo"
    android:src="@drawable/login_image"/>

  <LinearLayout
    android:id="@+id/login_linear_layout"
    style="@style/_Align_Mid_Child_vert"
    android:layout_below="@+id/login_image_view"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
      android:id="@+id/login_activity_login_tf"
      style="@style/_HomeFit_login_controls"
      android:hint="@string/login_login_field_hint"
      android:contentDescription="@string/login_login_field_cont_desc"
      android:text="@string/user_str_user_name"/>

    <EditText
      android:id="@+id/login_activity_pass_tf"
      style="@style/_HomeFit_login_controls"
      android:hint="@string/login_password_field_hint"
      android:contentDescription="@string/login_password_field_cont_desc"
      android:text="@string/user_str_password"/>

    <Button
      android:id="@+id/login_activity_login_bttn"
      style="@style/_HomeFit_login_controls"
      android:background="@android:color/background_dark"
      android:onClick="onClick"
      android:text="@string/login_login_button_text"
      android:textColor="@android:color/background_light"/>
  </LinearLayout>

</RelativeLayout>
